# fcitx-at-esc

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
po/: CMakeLists.txt  fcitx-at-esc.pot  ja.po
src/: CMakeLists.txt  at-esc-util.c  at-esc-util.h  at-esc.c  at-esc.h  fcitx-at-esc.conf.in  fcitx-at-esc.desc
